--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -23,6 +23,15 @@ html {
     text-rendering: optimizeLegibility;
 }
 
+.clearfix {zoom: 1}
+.clearfix:after {
+    content: '.';
+    clear: both;
+    display: block;
+    heigth: 0;
+    visibility: hidden;
+}
+
 /*---------------------------------------------*/
 /* REUSABLE COMPONENTS */
 /*---------------------------------------------*/
@@ -257,19 +266,53 @@ header {
     transform: scale(1.15);
 }
 
+/*---------------------------------------------*/
+/* HOW IT WORKS */
+/*---------------------------------------------*/
+.section-steps {
+    background-color: #f4f4f4;
+}
 
+.steps-box:first-child {
+/* text-align not only works for text elements but also for all inline or inline-block elements, of which img element is one. */
+    text-align: right;
+    padding-right: 3%;
+    margin-top: 30px;
+}
 
+.steps-box:last-child {
+    padding-left: 3%;
+    margin-top: 70px;
+}
 
+.app-screen {
+    width: 40%;
+}
 
+.works-step {
+    margin-bottom: 50px;
+}
 
+.works-step:last-of-type {
+    margin-bottom: 80px;
+}
 
+.works-step div {
+    color: #e67e22;
+    border: 2px solid #e67e22;
+    border-radius: 50%;
+    display: inline-block;
+    height: 50px;
+    width: 50px;
+    text-align: center;
+    padding: 5px;
+    float: left;
+    font-size: 150%;
+    margin-right: 25px;
+}
 
-
-
-
-
-
-
-
-
-
+.btn-app img {
+    height: 50px;
+    width: auto;
+    margin-right: 10px;
+}
