--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -150,7 +150,9 @@ a:active {
 /* ----- BUTTONS ----- */
 
 /* psuedo class 'link' is for when a link is fresh and 'visited' is for when a link is visited. Here we want both states of a link to look exactly the same. */
-.btn:link, .btn:visited {
+.btn:link,
+.btn:visited,
+input[type=submit] {
     display: inline-block;
     padding: 10px 30px;
     font-weight: 300;
@@ -160,7 +162,9 @@ a:active {
     transition: background-color 0.2s, border 0.2s, color 0.2s;
 }
 
-.btn-full:link, .btn-full:visited {
+.btn-full:link,
+.btn-full:visited,
+input[type=submit] {
 /*  this color called 'carrot' is chosen from flatuicolors.com  */
     background-color: #e67e22;
     border: 1px solid #e67e22;
@@ -168,17 +172,22 @@ a:active {
     margin-right: 15px;
 }
 
-.btn-ghost:link, .btn-ghost:visited {
+.btn-ghost:link,
+.btn-ghost:visited {
     border: 1px solid #e67e22;
     color: #e67e22;
 }
 
-.btn:hover, .btn:active {
+.btn:hover,
+.btn:active,
+input[type=submit]:hover,
+input[type=submit]:active {
 /*  paste #e67e22 in 0to255.com and select a darker tone of the color. That way we get #cf6d17  */
     background-color: #cf6d17;
 }
 
-.btn-full:hover, .btn-full:active {
+.btn-full:hover,
+.btn-full:active {
     border: 1px solid #cf6d17;
 }
 
@@ -460,4 +469,35 @@ cite img {
 
 .plan-box ul li {
     padding: 5px 0;
+}
+
+
+/*---------------------------------------------*/
+/* FORM */
+/*---------------------------------------------*/
+.contact-form {
+    width: 60%;
+    margin: 0 auto;
+}
+
+input[type=text],
+input[type=email],
+select,
+textarea {
+    width: 100%;
+    padding: 7px;
+    border-radius: 3px;
+    border: 1px solid #ccc;
+}
+
+textarea {
+    height: 100px;
+}
+
+input[type=checkbox] {
+    margin: 10px 5px 10px 0;
+}
+
+*:focus {
+    outline: none;
 }
