--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -391,6 +391,8 @@ blockquote {
     line-height: 145%;
     position: relative;
     margin-top: 40px;
+    /* Not there in tutor's code but I prefer text alignment to be justified. */
+    text-align: justify;
 }
 
 blockquote:before {
@@ -500,4 +502,84 @@ input[type=checkbox] {
 
 *:focus {
     outline: none;
+}
+
+
+/*---------------------------------------------*/
+/* FOOTER */
+/*---------------------------------------------*/
+footer {
+    background-color: #333;
+    padding: 50px;
+    font-size: 80%
+}
+
+.footer-nav {
+    list-style: none;
+    float: none;
+}
+
+.social-links {
+    list-style: none;
+    float: right;
+}
+
+.footer-nav li,
+.social-links li {
+    display: inline-block;
+    margin-right: 20px;
+}
+
+.footer-nav li:last-child,
+.social-links li:last-child {
+    margin-right: 0;
+}
+
+.footer-nav li a:link,
+.footer-nav li a:visited,
+.social-links li a:link,
+.social-links li a:visited {
+    text-decoration: none;
+    border: 0;
+    color: #888;
+    transition: color 0.2s;
+}
+
+.footer-nav li a:hover,
+.footer-nav li a:active {
+    color:#ddd;
+}
+
+.social-links li a:link,
+.social-links li a:visited {
+    font-size: 160%;
+}
+
+.ion-social-facebook,
+.ion-social-twitter,
+.ion-social-googleplus,
+.ion-social-instagram {
+    transition: color 0.2s;
+}
+
+.ion-social-facebook:hover {
+    color: #3b5998;
+}
+
+.ion-social-twitter:hover {
+    color: #00aced;
+}
+
+.ion-social-googleplus:hover {
+    color: #dd4b39;
+}
+
+.ion-social-instagram:hover {
+    color: #517fa4;
+}
+
+footer p {
+    color: #888;
+    text-align: center;
+    margin-top: 20px;
 }
